--- a/ModularSystemManagerBase/ModularSystemManagerBase.csproj
+++ b/ModularSystemManagerBase/ModularSystemManagerBase.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{C0BF6A7E-E4A7-4CE5-BCCA-0BF8F5542793}</ProjectGuid>
+    <ProjectGuid>{E61D9E0F-AE0E-41A5-9C83-CC268641CA53}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <RootNamespace>IngameScript</RootNamespace>
-    <AssemblyName>FermiCorvetteModularSubsystemManager</AssemblyName>
+    <AssemblyName>ModularSystemManagerBase</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -27,7 +27,6 @@
   <ItemGroup>
     <Reference Include="netstandard" />
     <Reference Include="System" />
-    <Reference Include="System.Collections.Immutable, Version=1.2.3.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -39,6 +38,7 @@
   <Import Project="MDK/MDK.options.props" />
   <Import Project="MDK/MDK.paths.props" Condition="exists('MDK/MDK.paths.props')" />
   <ItemGroup>
+    <Compile Include="GlobalSuppressions.cs" />
     <Compile Include="MDK\Bootstrapper.cs" />
     <AdditionalFiles Include="MDK\MDK.options.props">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
@@ -51,9 +51,7 @@
     <AdditionalFiles Include="thumb.png" />
     <AdditionalFiles Include="MDK\whitelist.cache" />
   </ItemGroup>
-  <Import Project="..\SharedProjects\Subsystems\Subsystems.projitems" Label="Shared" />
-  <Import Project="..\SharedProjects\Tasks\Tasks.projitems" Label="Shared" />
-  <Import Project="..\SharedProjects\Utility\Utility.projitems" Label="Shared" />
+  <Import Project="..\SharedProjects\SharedProjects.projitems" Label="Shared" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="AfterBuild">
     <Copy SourceFiles="MDK\MDK.options.props" DestinationFolder="$(TargetDir)\MDK" />
