--- a/PascalHeavyMinerModularSubsystemManager/MDK/MDK.paths.props
+++ b/PascalHeavyMinerModularSubsystemManager/MDK/MDK.paths.props
@@ -5,76 +5,72 @@
     You can safely exclude this file from code repositories and use different 
     user settings per machine.
     -->
-    <MDKVersion>1.2.32</MDKVersion>
+    <MDKVersion>1.2.31</MDKVersion>
     <MDKUseGameBinPath>no</MDKUseGameBinPath>
-    <MDKGameBinPath>c:\games\steam\SteamApps\common\SpaceEngineers\Bin64</MDKGameBinPath>
-    <MDKInstallPath>c:\users\brend\appdata\local\microsoft\visualstudio\16.0_2cd2f698\extensions\gzqkziad.tdu</MDKInstallPath>
-    <MDKOutputPath>C:\Users\brend\AppData\Roaming\SpaceEngineers\IngameScripts\local</MDKOutputPath>
+    <MDKGameBinPath>D:\SteamLibrary\SteamApps\common\SpaceEngineers\Bin64</MDKGameBinPath>
+    <MDKInstallPath>c:\users\sgtmook\appdata\local\microsoft\visualstudio\16.0_cd7b4d57\extensions\wabygocv.n0b</MDKInstallPath>
+    <MDKOutputPath>C:\Users\SgtMook\AppData\Roaming\SpaceEngineers\IngameScripts\local</MDKOutputPath>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="System.Collections.Immutable">
-      <HintPath>$(MDKGameBinPath)\System.Collections.Immutable.dll</HintPath>
-      <Private>false</Private>
-    </Reference>
     <Reference Include="Sandbox.Common">
       <HintPath>$(MDKGameBinPath)\Sandbox.Common.dll</HintPath>
-      <Private>False</Private>
+      <Private>false</Private>
     </Reference>
     <Reference Include="Sandbox.Game">
       <HintPath>$(MDKGameBinPath)\Sandbox.Game.dll</HintPath>
-      <Private>False</Private>
+      <Private>false</Private>
     </Reference>
     <Reference Include="Sandbox.Graphics">
       <HintPath>$(MDKGameBinPath)\Sandbox.Graphics.dll</HintPath>
-      <Private>False</Private>
+      <Private>false</Private>
     </Reference>
     <Reference Include="SpaceEngineers.Game">
       <HintPath>$(MDKGameBinPath)\SpaceEngineers.Game.dll</HintPath>
-      <Private>False</Private>
+      <Private>false</Private>
     </Reference>
     <Reference Include="SpaceEngineers.ObjectBuilders">
       <HintPath>$(MDKGameBinPath)\SpaceEngineers.ObjectBuilders.dll</HintPath>
-      <Private>False</Private>
+      <Private>false</Private>
     </Reference>
     <Reference Include="VRage">
       <HintPath>$(MDKGameBinPath)\VRage.dll</HintPath>
-      <Private>False</Private>
+      <Private>false</Private>
     </Reference>
     <Reference Include="VRage.Audio">
       <HintPath>$(MDKGameBinPath)\VRage.Audio.dll</HintPath>
-      <Private>False</Private>
+      <Private>false</Private>
     </Reference>
     <Reference Include="VRage.Game">
       <HintPath>$(MDKGameBinPath)\VRage.Game.dll</HintPath>
-      <Private>False</Private>
+      <Private>false</Private>
     </Reference>
     <Reference Include="VRage.Input">
       <HintPath>$(MDKGameBinPath)\VRage.Input.dll</HintPath>
-      <Private>False</Private>
+      <Private>false</Private>
     </Reference>
     <Reference Include="VRage.Library">
       <HintPath>$(MDKGameBinPath)\VRage.Library.dll</HintPath>
-      <Private>False</Private>
+      <Private>false</Private>
     </Reference>
     <Reference Include="VRage.Math">
       <HintPath>$(MDKGameBinPath)\VRage.Math.dll</HintPath>
-      <Private>False</Private>
+      <Private>false</Private>
     </Reference>
     <Reference Include="VRage.Render">
       <HintPath>$(MDKGameBinPath)\VRage.Render.dll</HintPath>
-      <Private>False</Private>
+      <Private>false</Private>
     </Reference>
     <Reference Include="VRage.Render11">
       <HintPath>$(MDKGameBinPath)\VRage.Render11.dll</HintPath>
-      <Private>False</Private>
+      <Private>false</Private>
     </Reference>
     <Reference Include="VRage.Scripting">
       <HintPath>$(MDKGameBinPath)\VRage.Scripting.dll</HintPath>
-      <Private>False</Private>
+      <Private>false</Private>
     </Reference>
     <Reference Include="MDKUtilities">
       <HintPath>$(MDKInstallPath)\MDKUtilities.dll</HintPath>
-      <Private>True</Private>
+      <Private>true</Private>
     </Reference>
     <Analyzer Include="$(MDKInstallPath)\Analyzers\MDKAnalyzer.dll" />
   </ItemGroup>
