--- a/CommandShipModularSystemManager/MDK/MDK.options.props
+++ b/CommandShipModularSystemManager/MDK/MDK.options.props
@@ -4,12 +4,12 @@
     <!-- 
     Contains basic settings that should be included in code repositories
     -->
-    <MDKVersion>1.2.22</MDKVersion>
+    <MDKVersion>1.3.1</MDKVersion>
     <MDKTrimTypes>
       <Enabled>yes</Enabled>
     </MDKTrimTypes>
     <MDKMinify>
-      <Enabled>yes</Enabled>
+      <Level>Full</Level>
     </MDKMinify>
     <MDKIgnore>
       <Folder>mdk</Folder>
