--- a/FermiCorvetteModularSubsystemManager/MDK/MDK.paths.props
+++ b/FermiCorvetteModularSubsystemManager/MDK/MDK.paths.props
@@ -5,11 +5,11 @@
     You can safely exclude this file from code repositories and use different 
     user settings per machine.
     -->
-    <MDKVersion>1.2.31</MDKVersion>
+    <MDKVersion>1.3.1</MDKVersion>
     <MDKUseGameBinPath>no</MDKUseGameBinPath>
-    <MDKGameBinPath>D:\SteamLibrary\SteamApps\common\SpaceEngineers\Bin64</MDKGameBinPath>
-    <MDKInstallPath>c:\users\sgtmook\appdata\local\microsoft\visualstudio\16.0_cd7b4d57\extensions\wabygocv.n0b</MDKInstallPath>
-    <MDKOutputPath>C:\Users\SgtMook\AppData\Roaming\SpaceEngineers\IngameScripts\local</MDKOutputPath>
+    <MDKGameBinPath>c:\games\steam\SteamApps\common\SpaceEngineers\Bin64</MDKGameBinPath>
+    <MDKInstallPath>c:\users\brend\appdata\local\microsoft\visualstudio\16.0_2cd2f698\extensions\zfaqknfp.pzr</MDKInstallPath>
+    <MDKOutputPath>C:\Users\brend\AppData\Roaming\SpaceEngineers\IngameScripts\local</MDKOutputPath>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Sandbox.Common">
