--- a/ECMModule/MDK/MDK.options.props
+++ b/ECMModule/MDK/MDK.options.props
@@ -4,12 +4,12 @@
     <!-- 
     Contains basic settings that should be included in code repositories
     -->
-    <MDKVersion>1.2.22</MDKVersion>
+    <MDKVersion>1.2.31</MDKVersion>
     <MDKTrimTypes>
       <Enabled>yes</Enabled>
     </MDKTrimTypes>
     <MDKMinify>
-      <Enabled>no</Enabled>
+      <Level>StripComments</Level>
     </MDKMinify>
     <MDKIgnore>
       <Folder>mdk</Folder>
