--- a/SlaveShipModularSystemManager/MDK/MDK.options.props
+++ b/SlaveShipModularSystemManager/MDK/MDK.options.props
@@ -4,15 +4,15 @@
     <!-- 
     Contains basic settings that should be included in code repositories
     -->
-    <MDKVersion>1.2.22</MDKVersion>
+    <MDKVersion>1.4.7</MDKVersion>
     <MDKTrimTypes>
-      <Enabled>yes</Enabled>
+        <Enabled>yes</Enabled>
     </MDKTrimTypes>
     <MDKMinify>
-      <Enabled>yes</Enabled>
+        <Level>Full</Level>
     </MDKMinify>
     <MDKIgnore>
-      <Folder>mdk</Folder>
+        <Folder>mdk</Folder>
     </MDKIgnore>
   </PropertyGroup>
 </Project>
