--- a/TuringCorvetteModularSubsystemManager/MDK/MDK.options.props
+++ b/TuringCorvetteModularSubsystemManager/MDK/MDK.options.props
@@ -9,7 +9,7 @@
       <Enabled>yes</Enabled>
     </MDKTrimTypes>
     <MDKMinify>
-      <Level>Lite</Level>
+      <Level>Full</Level>
     </MDKMinify>
     <MDKIgnore>
       <Folder>mdk</Folder>
