--- a/ECMModule/ECMModule.csproj
+++ b/ECMModule/ECMModule.csproj
@@ -51,7 +51,9 @@
     <AdditionalFiles Include="thumb.png" />
     <AdditionalFiles Include="MDK\whitelist.cache" />
   </ItemGroup>
-  <Import Project="..\SharedProjects\SharedProjects.projitems" Label="Shared" />
+  <Import Project="..\SharedProjects\Subsystems\Subsystems.projitems" Label="Shared" />
+  <Import Project="..\SharedProjects\Tasks\Tasks.projitems" Label="Shared" />
+  <Import Project="..\SharedProjects\Utility\Utility.projitems" Label="Shared" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="AfterBuild">
     <Copy SourceFiles="MDK\MDK.options.props" DestinationFolder="$(TargetDir)\MDK" />
