Fleet Intel, Exection Context: - Fixed a bug with Fleet Intel messaging where a bad conditional made the messaging between command ship and sub ships backwards. This exposed another issue where the message formatting was incorrect on the recieve side for sub ship to command ship messages. - Migrated ProgramReference, Program and a few other variables to a ExectionContext that is propagated through to subsystem manager & subsystems. Added a log here to aid debugging. ( think it fits in character limit with changes )

--- a/RavenDrone/MDK/MDK.options.props
+++ b/RavenDrone/MDK/MDK.options.props
@@ -6,13 +6,13 @@
     -->
     <MDKVersion>1.4.7</MDKVersion>
     <MDKTrimTypes>
-        <Enabled>yes</Enabled>
+      <Enabled>yes</Enabled>
     </MDKTrimTypes>
     <MDKMinify>
-        <Level>Full</Level>
+      <Level>None</Level>
     </MDKMinify>
     <MDKIgnore>
-        <Folder>mdk</Folder>
+      <Folder>mdk</Folder>
     </MDKIgnore>
   </PropertyGroup>
 </Project>
