--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,5 @@
 [Pp]ackages/
 
 MDK.paths.props
+/SharedProjects/Subsystems/HoverTorpedoSubsystem.bak3
+/SharedProjects/Subsystems/HoverTorpedoSubsystem.bak2
