--- a/MissileBatteryMSM/MDK/MDK.options.props
+++ b/MissileBatteryMSM/MDK/MDK.options.props
@@ -4,15 +4,15 @@
     <!-- 
     Contains basic settings that should be included in code repositories
     -->
-      <MDKVersion>1.4.7</MDKVersion>
-      <MDKTrimTypes>
-          <Enabled>yes</Enabled>
-      </MDKTrimTypes>
-      <MDKMinify>
-          <Level>Full</Level>
-      </MDKMinify>
-      <MDKIgnore>
-          <Folder>mdk</Folder>
-      </MDKIgnore>
+    <MDKVersion>1.4.12</MDKVersion>
+    <MDKTrimTypes>
+      <Enabled>yes</Enabled>
+    </MDKTrimTypes>
+    <MDKMinify>
+      <Level>None</Level>
+    </MDKMinify>
+    <MDKIgnore>
+      <Folder>mdk</Folder>
+    </MDKIgnore>
   </PropertyGroup>
 </Project>
