--- a/MissileBatteryMSM/MissileBatteryMSM.csproj
+++ b/MissileBatteryMSM/MissileBatteryMSM.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{D02F10A6-EEDA-45E2-9E37-40247EC6EBC4}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <RootNamespace>IngameScript</RootNamespace>
-    <AssemblyName>HummingbirdModularSystemManager</AssemblyName>
+    <AssemblyName>MissileBatteryMSM</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -51,7 +51,9 @@
     <AdditionalFiles Include="thumb.png" />
     <AdditionalFiles Include="MDK\whitelist.cache" />
   </ItemGroup>
-  <Import Project="..\SharedProjects\SharedProjects.projitems" Label="Shared" />
+  <Import Project="..\SharedProjects\Subsystems\Subsystems.projitems" Label="Shared" />
+  <Import Project="..\SharedProjects\Tasks\Tasks.projitems" Label="Shared" />
+  <Import Project="..\SharedProjects\Utility\Utility.projitems" Label="Shared" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="AfterBuild">
     <Copy SourceFiles="MDK\MDK.options.props" DestinationFolder="$(TargetDir)\MDK" />
